# OP2-Common

./: .gitattributes  .gitignore  .readthedocs.yaml  AUTHORS  CHANGELOG.md  CODEBASE_OVERVIEW.md  LICENSE  README  README.md  dcs_build.sh  notes_from_thursday.md  tmp.txt
apps/c/: CMakeLists.txt  README  aero-common.cmake  airfoil-common.cmake  cmake.local  common.cmake  op2_generate.m
apps/c/aero/: CMakeLists.txt
apps/c/aero/aero_hdf5/: CMakeLists.txt  Makefile  aero.cpp  res_calc.h  spMV.h  updateP.h  updateUR.h  write_hdf5.cpp
apps/c/aero/aero_hdf5_generate_vtk/: aero.cpp  gen_data.sh  generate_res_graphs.py  h5s_to_vtk.py  write_hdf5.cpp
apps/c/aero/aero_hdf5_sp/: aero.cpp  dotPV.h  dotR.h  init_cg.h  res_calc.h
apps/c/aero/aero_hdf5_sp_dp_mix/: aero.cpp  dirichlet.h  spMV.h  update.h  updateP.h  updateUR.h
apps/c/aero/aero_plain/: CMakeLists.txt  Makefile  aero.cpp  aero_mpi.cpp  dotPV.h  res_calc.h  update.h
apps/c/aero/aero_reproducible/: CMakeLists.txt
apps/c/aero/dp/: Makefile  aero.cpp  aero_kernels.cpp  aero_kernels.cu  aero_mpi.cpp  aero_op.cpp  airfoil.cpp  airfoil_kernels.cpp  airfoil_kernels.cu  airfoil_mpi.cpp  airfoil_op.cpp  bres_calc.h  dirichlet_kernel.cpp  dirichlet_kernel.cu  dotPV.h  dotPV_kernel.cpp  dotPV_kernel.cu  dotR_kernel.cpp  dotR_kernel.cu  init_cg.h  init_cg_kernel.cpp  init_cg_kernel.cu  naca0012.m  res_calc.h  res_calc_kernel.cpp  res_calc_kernel.cu  spMV.h  spMV_kernel.cpp  spMV_kernel.cu  update.h  updateP.h  updateP_kernel.cpp  updateP_kernel.cu  updateUR_kernel.cpp  updateUR_kernel.cu  update_kernel.cpp  update_kernel.cu  write_hdf5.cpp  zero_res.h
apps/c/aero/hdf5/: Makefile  aero.cpp  aero_kernels.cpp  aero_kernels.cu  aero_op.cpp  airfoil.cpp  airfoil_kernels.cpp  airfoil_kernels.cu  airfoil_op.cpp  dirichlet.h  dirichlet_kernel.cpp  dirichlet_kernel.cu  dotPV_kernel.cpp  dotPV_kernel.cu  dotR_kernel.cpp  dotR_kernel.cu  init_cg_kernel.cpp  init_cg_kernel.cu  naca0012.m  res_calc_kernel.cpp  res_calc_kernel.cu  spMV_kernel.cpp  spMV_kernel.cu  updateP.h  updateP_kernel.cpp  updateP_kernel.cu  updateUR_kernel.cpp  updateUR_kernel.cu  update_kernel.cpp  update_kernel.cu  write_hdf5.cpp  zero_res.h
apps/c/aero/mpi/: Makefile  aero.cpp  aero_kernels.cpp  aero_kernels.cu  aero_mpi.cpp  aero_op.cpp  airfoil.cpp  dotPV.h  (+26 more)
apps/c/airfoil/: CMakeLists.txt  Makefile  README  README.md  adt_calc.h  adt_calc_kernel.cpp  adt_calc_kernel.cu  airfoil.cpp  airfoil_kernels.cpp  airfoil_kernels.cu  airfoil_mpi.cpp  airfoil_op.cpp  airfoil_seq  bres_calc_kernel.cpp  res_calc_kernel.cpp  res_calc_kernel.cu  save_soln_kernel.cpp  save_soln_kernel.cu  update_kernel.cpp  update_kernel.cu
apps/c/airfoil_hdf5/: CMakeLists.txt
apps/c/airfoil_mpi_cuda/: CMakeLists.txt
apps/c/airfoil_mpi_openmp/: CMakeLists.txt
apps/c/halo_extension/: Makefile  airfoil_mpi.cpp  airfoil_mpi_op.cpp  res_calc1.h  res_calc2.h
apps/c/identity/: CMakeLists.txt  config  identity.cpp  identity_decls.cpp  identity_kernel.cu  rose_identity_cuda.cpp
apps/c/jac1/: CMakeLists.txt  Makefile  jac.cpp  jac_kernels.cpp  jac_kernels.cu  jac_mpi.cpp  jac_op.cpp  res_kernel.cpp  res_kernel.cu  update_kernel.cpp  update_kernel.cu
apps/c/jac2/: CMakeLists.txt  Makefile  check_result.h  jac.cpp  jac_kernels.cpp  jac_kernels.cu  jac_mpi.cpp  jac_op.cpp  jac_seqkernels.cpp  res.h  res_kernel.cpp  res_kernel.cu  res_seqkernel.cpp  res_veckernel.cpp  update.h  update_kernel.cpp  update_kernel.cu  update_seqkernel.cpp  update_veckernel.cpp
apps/c/laplace1d/: CMakeLists.txt  laplace.cpp  laplace.h
apps/c/mass2d/: CMakeLists.txt  mass-multiset.cpp  mass-multiset.h  mass.cpp  mass.h  mass_cuda.cpp  mass_cuda.h  mass_kernel.cu  rhs.h  rhs_kernel.cu  types.h
apps/c/min/: Makefile  min_direct.cpp  min_indirect.cpp
apps/c/minimalist_reproducible/: Makefile  convert_mesh.cpp  increment_log.h  minimal.cpp  minimal_op.cpp
apps/c/reduction/: CMakeLists.txt  Makefile  addto.h  addto_id.h  addto_id_kernel.cpp  addto_id_kernel.cu  addto_kernel.cpp  addto_kernel.cu  count.h  count_kernel.cpp  count_kernel.cu  reduce.cpp  reduce_kernels.cpp  reduce_kernels.cu  reduce_op.cpp  reduction.cpp  reduction_hybkernels.cu  reduction_kernels.cpp  reduction_kernels.cu  reduction_mpi.cpp  reduction_mpi_kernels.cpp  reduction_mpi_kernels.cu  reduction_mpi_op.cpp  reduction_op.cpp  res_calc.h  res_calc_kernel.cpp  res_calc_kernel.cu  res_calc_seqkernel.cpp  res_calc_veckernel.cpp  update.h  update_kernel.cpp  update_kernel.cu  update_seqkernel.cpp  update_veckernel.cpp
apps/c/volna/: EvolveValuesRK2_1.h  EvolveValuesRK2_2.h  FacetsValuesFromCellValues.h  Makefile  NumericalFluxes_1.h  NumericalFluxes_2.h  SpaceDiscretisation_1.h  SpaceDiscretization_1.h  SpaceDiscretization_2.h  SpaceDiscretization_3.h  applyConst.h  computeFluxes.h  getTotalVol.h  initBathymetry_formula.h  initBathymetry_update.h  initBore_select.h  initEta_formula.h  initGaussianLandslide.h  initU_formula.h  initV_formula.h  mesh2hdf5.cpp  overwrite.h  simulation_1.h  values_operation2.h  volna.cpp  volna_common.h  volna_event.cpp  volna_init.cpp  volna_output.cpp  volna_simulation.cpp
op2/c/: CMakeLists.txt  MakeLibraries  Makefile  README  cmake.local  cmake.sequential  ruby.sh
op2/c/include/: .op_cuda_rt_support.h.swp  README  op_cuda_reduction.h  op_cuda_rt_support.h  op_cuda_utils.h  op_hdf5.h  op_hip_reduction.h  op_hip_rt_support.h  op_lib.h  op_lib_c.h  op_lib_core.h  op_lib_cpp.h  op_lib_mat.h  op_lib_mpi.h  op_lib_tuner.h  op_mpi_comm_avoid.h  op_mpi_comm_avoid_mem.h  op_mpi_core.h  op_mpi_hdf5.h  op_mpi_part_core.h  op_mpi_seq.h  op_mpi_slope_core.h  op_mpi_util.h  op_opencl_core.h  op_opencl_reduction.h  op_opencl_rt_support.h  op_openmp_rt_support.h  op_reference.h  op_rt_support.h  op_seq.h  op_seq_mat.h  op_sycl_reduction.h  op_sycl_rt_support.h  op_util.h  uthash.h
op2/c/scripts/: generate_libraries.sh
op2/c/src/: CMakeLists.txt  op_lib_core.c  op_lib_core.cpp  op_reference.c  op_reference.cpp  op_rt_support.c  op_rt_support.cpp
op2/c/tools/: compare.cpp  comparebin.cpp
op2/c/util/: op_par_loop_gen.py
(+2486 files in other folders)
